# hello-rust

./: Cargo.toml
src/: 01-main.rs  03-enums.rs  04-linked_list.rs  06-scopes.rs  07-types.rs  09.1-expressions.rs  09.2-expressions.rs  10-destructure.rs  structs.rs
src/calculator/: calc.rs
src/first-steps/: 01-main.rs  02-structs.rs  03-enums.rs  05-constants.rs  08-conversion.rs  10-destructure.rs  11.1-functions.rs  11.2-methods.rs  11.3-closures.rs  11.n-higher-order-functions.rs
src/sorts/: bubble-sort.rs  sort-testing.rs  stalin-sort.rs
