[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Fedor Uvarychev <ufispb@gmail.com>"]
edition = "2018"

[dependencies]
ferris-says  = "0.1"

[[bin]]
name = "main"
path = "src/01-main.rs"

[[bin]]
name = "structs"
path = "src/02-structs.rs"

[[bin]]
name = "enums"
path = "src/03-enums.rs"

[[bin]]
name = "list"
path = "src/04-linked_list.rs"

[[bin]]
name = "const"
path = "src/05-constants.rs"

[[bin]]
name = "scopes"
path = "src/06-scopes.rs"

[[bin]]
name = "types"
path =  "src/07-types.rs"