[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Fedor Uvarychev <ufispb@gmail.com>"]
edition = "2018"

[dependencies]
ferris-says  = "0.1"

[[bin]]
name = "main"
path = "src/first-steps/01-main.rs"

[[bin]]
name = "structs"
path = "src/first-steps/02-structs.rs"

[[bin]]
name = "enums"
path = "src/first-steps/03-enums.rs"

[[bin]]
name = "list"
path = "src/first-steps/04-linked_list.rs"

[[bin]]
name = "const"
path = "src/first-steps/05-constants.rs"

[[bin]]
name = "scopes"
path = "src/first-steps/06-scopes.rs"

[[bin]]
name = "types"
path =  "src/first-steps/07-types.rs"

[[bin]]
name = "conversion"
path =  "src/first-steps/08-conversion.rs"

[[bin]]
name = "expr"
path = "src/first-steps/09.1-expressions.rs"

[[bin]]
name = "match"
path = "src/first-steps/09.2-expressions.rs"

[[bin]]
name = "destructure"
path = "src/first-steps/10-destructure.rs"

[[bin]]
name = "sort-stalin"
path = "src/sorts/stalin-sort.rs"

[[bin]]
name = "sort-testing"
path = "src/sorts/sort-testing.rs"

[[bin]]
name = "sort-bubble"
path = "src/sorts/bubble-sort.rs"

[[bin]]
name = "functions"
path = "src/first-steps/11.1-functions.rs"

[[bin]]
name = "methods"
path = "src/first-steps/11.2-methods.rs"

[[bin]]
name = "closures"
path = "src/first-steps/11.3-closures.rs"

[[bin]]
name = "higher_order_functions"
path = "src/first-steps/11.n-higher-order-functions.rs"

[[bin]]
name = "calc"
path = "src/calculator/calc.rs"
